--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ android {
     lint {
         abortOnError false
     }
+    namespace 'com.picovr.cloudxr'
 
     defaultConfig {
         applicationId "com.picovr.cloudxr"
